--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,11 @@
             <version>3.22.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.jsonschema2pojo</groupId>
+            <artifactId>jsonschema2pojo-core</artifactId>
+            <version>1.1.2</version>
+        </dependency>
 
     </dependencies>
 
